--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@ colour scheme { /* These are just color swatches to use as a theme, copy to wher
     color: #0C4582;
     color: #D3E239;
     color: #CAD7E4;
-    color: #345B71;
+    color: #0C458220;
 }
 
 body { /* Edit colour for background on all pages */
@@ -17,20 +17,35 @@ h5,h4,b {
 /* Buttons 
 -------------------------------------------------- */
 .btn-main {
+    border-radius: 25%;
     color: #fff;
     background-color: #D3E239;
     border-color: #D3E239;
-  }
-  .btn-main:hover {
+    border-width: 2px;
+}
+.btn-main:hover {
+    color: #D3E239;
     background-color: #D3E23950;
-  }
+}
+
+.btn-inv {
+    border-radius: 25%;
+    color: #D3E239;
+    background-color: #fff;
+    border-color: #D3E239;
+    border-width: 2px;
+}
+.btn-inv:hover {
+    color: #D3E239;
+    background-color: #D3E23950;
+}
 
 
 
 /* Boxes 
 -------------------------------------------------- */
 .w-box {
-    border-radius: 50px;
+    border-radius: 15px;
     padding: 25px;
     background-color: #ffffff;
     margin: auto;
@@ -38,9 +53,9 @@ h5,h4,b {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 .b-box {
-    border-radius: 50px;
+    border-radius: 15px;
     padding: 25px;
-    background-color: #345B71;
+    background-color: #0C458220;
     margin: auto;
     width: 100%;
 }
@@ -55,9 +70,9 @@ h5,h4,b {
 }
 
 .b-input {
-    border-radius: 10px;
-    padding: 25px;
-    background-color: #345B71;
+    border-radius: 25%;
+    padding: 5px;
+    background-color: #0C458220;
     margin: auto;
     width: 100%;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
