--- a/stylesheet.css
+++ b/stylesheet.css
@@ -78,3 +78,11 @@ b {
   width: 100%;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
+.b-select {
+  border-radius: 15px;
+  padding: 5px;
+  background-color: #0c458220;
+  margin: auto;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
