--- a/stylesheet.css
+++ b/stylesheet.css
@@ -106,7 +106,7 @@ body {
 }
 .styled-table thead tr {
   background-color: #ffffff15;
-  color: white;
+  color: #0c4582;
 }
 .styled-table th,
 .styled-table td {
